# video-diff

./: .gitignore  README.md  pyproject.toml  run.sh
server/: app.py
server/static/: app.js  style.css
server/views/: index.html
videodiff/: cli.py  compare.py  core.py  fingerprint.py  models.py
