[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "videodiff"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless",
    "numpy",
    "scipy",
    "bottle",
]

[project.scripts]
videodiff = "videodiff.cli:main"
videodiff-server = "server.app:main"
